# aibot

./: .gitignore  .pre-commit-config.yaml  .python-version  MCP_BRIDGE_SETUP.md  Makefile  README.md  aibot.code-workspace  deploy.sh  env.template  eslint.config.js  package-lock.json  package.json  pyproject.toml  test.setup.ts  test_output.txt  tsconfig.json  vitest.config.ts  vitest.workspace.ts
.claude/: CLAUDE.md
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  deploy.yml
cdk/: README.md  buildLambdaBundles.sh  iam-execution-policy.json  package-lock.json  package.json
cdk/lib/: common.ts  dynamodb-stack.ts  lambda-stack.ts  secretsmanager-stack.ts
docs/: architecture.md  deployment.md  mcp-bridge-docker.md  mcp-bridge-setup.md  ux-and-design.md
gcp-cf-src/: aws_api.py  gcp_api.py  handle_collect_slack_messages.py  main.py  requirements.txt  slack_api.py
lambda-src/: .gitignore  package-lock.json  package.json
lambda-src/ts-src/: generateGoogleAuthBlocks.ts  generateImmediateSlackResponseBlocks.ts  generateLoggedInHTML.ts  generateV4ReadSignedUrl.ts  googleAPI.ts  handleEventsEndpoint.ts  handleGoogleAuthRedirect.ts  handleHomeTabEvent.ts  handleInteractiveEndpoint.ts  handleLoginCommand.ts  handleLogoutCommand.ts  handlePromptCommand.ts  handleSlackAuthRedirect.ts  handleSlashCommand.ts  historyTable.ts  slackAPI.ts  slackIdToHistoryTable.ts  stateTable.ts  tokenStorage.ts
manifests/: aws_secrets.jsonc  cdk_policy.json  clientLibraryConfig.template.json  cloud.tf  gcp_secrets.jsonc  slack.json
python/: Dockerfile  base.Dockerfile  pyproject.toml
python/libs/shared/: pyproject.toml
python/libs/shared/shared/: __init__.py  firestore_api.py  gcp_api.py  google_auth.py  logging.py  security.py  slack_api.py
python/libs/shared/tests/: conftest.py  test_firestore_api.py  test_gcp_api.py  test_google_auth_extra.py  test_logging.py  test_security.py  test_slack_api.py
python/services/aibot_logic/: Dockerfile  agents.py  main.py  pyproject.toml
python/services/aibot_logic/tests/: test_agents_extra.py  test_main.py  test_main_extra.py
python/services/slack_collector/: Dockerfile  main.py  pyproject.toml  requirements.txt
python/services/slack_collector/tests/: test_main.py  test_main_extra.py
python/services/slack_search_mcp/: Dockerfile  main.py  pyproject.toml
python/services/slack_search_mcp/tests/: test_main.py  test_main_robustness.py  test_mcp_client_accessor.py  test_security_comprehensive.py
python/tests/: conftest.py  integration_test.py
python/tools/: mcp_proxy.Dockerfile  mcp_proxy.py
python/tools/tests/: test_mcp_proxy.py  test_mcp_proxy_extra.py  test_mcp_proxy_sa_jwt.py
scripts/: connect_mcp_remote.py  debug_mcp.sh  deploy.sh  local-dev-policy.json  mcp_search.py  test_mcp_local.py
terraform/: README.md  apis.tf  artifact_registry.tf  build_gcf_bundles.sh  cloud.tf  cloud_function.tf  cloud_run.tf  cloud_storage_datastore.tf  custom_roles.tf  env.template  gcs-lifecycle.json  github_actions.tf  init.sh  kms.tf  main.tf  random_id.tf  security_advanced.tf  tfplan  variables.tf
terraform/gemini_project/: apis.tf  cloud_function.tf  cloud_run.tf  cloud_storage_datastore.tf  custom_roles.tf  main.tf
terraform/identity_project/: custom_roles.tf  main.tf  workload_identity_pool.tf
