[project]
name = "aibot-beta"
version = "0.1.0"
description = "AIBot Monorepo"
requires-python = ">=3.11"
dependencies = []

[tool.uv]
workspace = { members = [
    "python/libs/shared",
    "python/services/aibot_logic",
    "python/services/slack_collector",
    "python/services/slack_search_mcp",
] }

[tool.uv.sources]
shared = { workspace = true }
aibot-logic = { workspace = true }
slack-collector = { workspace = true }
slack-search-mcp = { workspace = true }

[dependency-groups]
dev = [
    "shared",
    "aibot-logic",
    "slack-collector",
    "slack-search-mcp",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "respx>=0.21.0",
    "ruff>=0.3.0",
    "httpx>=0.27.0",
    "keyring>=24.0.0",
    "pre-commit>=3.6.0",
]

[tool.ruff]
# Target version for Python
target-version = "py311"

# Enable all default rules plus a few extras
[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "W",    # pycodestyle warnings
]
ignore = [
    "E501", # line-length (often better managed manually)
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Keep it simple
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
pythonpath = ["python"]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["python"]
