[project]
name = "shared"
version = "0.1.0"
dependencies = [
    "google-cloud-secret-manager>=2.24.0",
    "slack-sdk>=3.39.0",
    "google-cloud-pubsub>=2.34.0",
    "google-cloud-firestore>=2.20.0",
    "python-dotenv>=1.0.1",
    "aiohttp>=3.11.0",
    "google-cloud-logging>=3.11.0"
]

[tool.setuptools]
package-dir = {"" = "."}
packages = ["shared"]
