[project]
name = "shared"
version = "0.1.0"
dependencies = [
    "google-cloud-secret-manager>=2.24.0",
    "slack-sdk>=3.39.0",
    "google-cloud-pubsub>=2.34.0",
    "google-cloud-firestore>=2.20.0",
    "python-dotenv>=1.0.1",
    "aiohttp>=3.11.0",
    "google-cloud-logging>=3.11.0",
    "httpx>=0.28.1",
    "pyjwt>=2.10.1",
    "google-cloud-kms>=3.0.0",
    "google-auth>=2.0.0",
    "google-cloud-firestore>=2.0.0",
    "cachecontrol>=0.14.0",
    "requests>=2.32.0"
]

[tool.setuptools]
package-dir = {"" = "."}
packages = ["shared"]
