[project]
name = "aibot-logic"
version = "0.1.0"
dependencies = [
    "shared",
    "google-adk>=2.1.0",
    "fastapi>=0.136.1",
    "uvicorn>=0.47.0",
    "google-cloud-pubsub>=2.38.0",
    "google-cloud-firestore>=2.27.0",
    "slack-sdk>=3.42.0",
    "python-dotenv>=1.2.2",
    "mcp[fastapi]>=1.27.1",
    "vertexai>=1.71.1",
    "google-cloud-aiplatform>=1.153.1",
    "pydantic>=2.13.4",
    "pytz>=2026.2",
    "pyjwt>=2.13.0"
]

[tool.setuptools]
package-dir = {"" = "."}
packages = []
