[project]
name = "aibot-logic"
version = "0.1.0"
dependencies = [
    "shared",
    "google-adk>=2.3.0",
    "fastapi>=0.139.0",
    "uvicorn>=0.49.0",
    "google-cloud-pubsub>=2.39.0",
    "google-cloud-firestore>=2.28.0",
    "slack-sdk>=3.42.0",
    "python-dotenv>=1.2.2",
    "mcp[fastapi]>=1.28.1",
    "vertexai>=1.71.1",
    "google-cloud-aiplatform>=1.159.0",
    "pydantic>=2.13.4",
    "pytz>=2026.2",
    "pyjwt>=2.13.0"
]

[tool.setuptools]
package-dir = {"" = "."}
packages = []
