[project]
name = "slack-collector"
version = "0.1.0"
dependencies = [
    "shared",
    "google-cloud-bigquery>=3.42.0",
    "google-cloud-aiplatform>=1.157.0",
    "vertexai>=1.71.1",
    "python-dotenv>=1.2.2",
    "fastapi>=0.137.1",
    "uvicorn>=0.49.0"
]

[tool.setuptools]
package-dir = {"" = "."}
packages = []
