[project]
name = "slack-collector"
version = "0.1.0"
dependencies = [
    "shared",
    "google-cloud-bigquery>=3.42.1",
    "google-cloud-aiplatform>=1.159.0",
    "vertexai>=1.71.1",
    "python-dotenv>=1.2.2",
    "fastapi>=0.139.0",
    "uvicorn>=0.50.2"
]

[tool.setuptools]
package-dir = {"" = "."}
packages = []
