[project]
name = "slack-search-mcp"
version = "0.1.0"
dependencies = [
    "shared",
    "mcp[fastapi]>=1.28.1",
    "fastapi>=0.139.0",
    "uvicorn>=0.51.0",
    "google-cloud-bigquery>=3.42.2",
    "google-genai>=2.11.0",
    "python-dotenv>=1.2.2",
    "slack-sdk>=3.43.0",
    "google-auth>=2.55.2"
]

[tool.setuptools]
package-dir = {"" = "."}
packages = []
