[project]
name = "slack-search-mcp"
version = "0.1.0"
dependencies = [
    "shared",
    "mcp[fastapi]>=1.28.1",
    "fastapi>=0.139.2",
    "uvicorn>=0.51.0",
    "google-cloud-bigquery>=3.42.2",
    "google-genai>=2.12.1",
    "python-dotenv>=1.2.2",
    "slack-sdk>=3.43.0",
    "google-auth>=2.56.0"
]

[tool.setuptools]
package-dir = {"" = "."}
packages = []
